# einkbro

./: .gitignore  .travis.yml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  Contributing.md  FAQs.md  LICENSE.md  PRIVACY.md  Privacy.md  README.md  ROADMAP.md  SCREENSHOTS.md  build.gradle  build.gradle.kts  checkqbsdk.sh  crowdin.properties  crowdin.yml  gradle.properties  ideas.txt  settings.gradle  settings.gradle.kts
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug-report-only.md  bug_report.md
.github/workflows/: buid-app-workflow.yaml
.mainframer/: config  ignore  localignore  remoteaquire  remoteaquire_apkonly
ad-filter/: README.md  build.gradle  build.gradle.kts  consumer-rules.pro
ad-filter/scriptlets_src/: README.md  gulpfile.js  package.json  scriptlets.js
ad-filter/src/main/js/: element_hiding.js  elemhide_blocked.js  extended-css.min.js  inject.js  scriptlets.min.js  scriptlets_inject.js
adblock-client/: CMakeLists.txt  build.gradle  consumer-rules.pro
adblock-client/src/androidTest/java/io/github/edsuns/adblockclient/: AdBlockClientTest.kt
adblock-client/src/androidTest/resources/binary/: easylist_sample
adblock-client/src/main/cpp/: adblockclient-lib.cpp
adblock-client/src/main/java/io/github/edsuns/adblockclient/: AdBlockClient.kt  Client.kt  MatchResult.kt  ResourceType.kt
adblock-rust-client/: .gitignore  build.gradle  consumer-rules.pro  proguard-rules.pro
adblock-rust-client/rust/: Cargo.toml
adblock-rust-client/rust/src/: lib.rs
app/: build.gradle  build.gradle.kts  lint-baseline.xml  proguard-rules.pro  proguard-rules.txt
app/release/: output.json
app/schemas/de.baumann.browser.database.AppDatabase/: 2.json
app/schemas/info.plateaukao.einkbro.database.AppDatabase/: 10.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: MozReadability.css  MozReadability.js  audio_only_mode.js  audio_only_mode_off.js  blob_download_hook.js  blob_url_fetch.js  chat.html  disable_video_autoplay.js  dns_prefetch.js  eVoiceList.json  ebook_touch.js  error_page.html  extract_links.js  fix_dsd_pending.js  fix_scrolling.js  force_viewport_width.js  hosts  (+40 more)
docs/: bugs.html  develop.html  download.html  guide.html  index.html  lang-banner.js  style.css
docs/zh-tw/: bugs.html  develop.html  download.html  guide.html  index.html
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
js-tests/: README.md  package.json
js-tests/helpers/: loadScripts.js  setup.js
js-tests/tests/: by_paragraph.test.js  idempotency.test.js  in_place.test.js  lazy_hydration.test.js  spa_replacement.test.js
scripts/: check_locale_strings.py
test_server/: article.html  autoplay_test.html  index.html  inner_scroll.html  js_check.html  link_test.html  menu_test.user.js  state_read.html  state_set.html  ua_check.html  userscript_install_test.html  vertical.html
tools/: .screenshots.yml.swp  flow.yml  scout-browsers.sh  screenshots.yml  settings_arch.excalidraw  temp  webview_browsers.txt
(+1309 files in other folders)
