[package]
name = "adblock_rust_client"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = { version = "0.21", default-features = false }
adblock = { version = "0.12", default-features = false, features = ["full-regex-handling"] }

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
